# cpp-with-cmake-and-nix

./: .clang-tidy  CMakeLists.txt  README.md  shell.nix
app/: CMakeLists.txt
app/src/: main.cpp
cmake/: CompilerWarnings.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalysis.cmake
include/: bitmanipulation.hpp
lib/: CMakeLists.txt
lib/bitmanipulation/: CMakeLists.txt  bitmanipulation.cpp
lib/bitmanipulation/include/: bitmanipulation.hpp
lib/rpn_parser/: CMakeLists.txt  rpn_parser.cpp
lib/rpn_parser/include/: rpn_parser.hpp
src/: CMakeLists.txt
test/: CMakeLists.txt  bitmanipulation_test.cpp
test/fuzz/: CMakeLists.txt  rpn_parser_test.cpp
test/unit/: CMakeLists.txt  bitmanipulation_test.cpp  rpn_parser_test.cpp
